# SSbarAnalysis

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analysis.cpp  analysis1.cpp  analysis2.cpp  build.sh  jets_analysis.cpp  main.cc  merge.py  run.sh
NtupleProcessor/: CMakeLists.txt  LinkDef.hh  build.sh  main.cc  makefile
NtupleProcessor/include/: EventAnalyzer.hh  FileSelector.hh  HistManager.hh  NtupleProcessor.hh  PFOTools.hh  TreeIterator.hh  TreeReader.hh  TreeStructures.hh  TreeVariables.hh  TreeWriter.hh  VectorTools.hh
NtupleProcessor/src/: CMakeLists.txt  EventAnalyzer.cc  FileSelector.cc  HistManager.cc  NtupleProcessor.cc  PFOTools.cc  TreeIterator.cc  TreeReader.cc  TreeVariables.cc  TreeWriter.cc  VectorTools.cc  main.cc
SSbarLibrary/: CMakeLists.txt  TreeStructures.hh  timestamp.hh
SSbarLibrary/include/: AnalysisConfig.hh  ConfigReader.hh  FileSelector.hh  MapTString.hh  TreeStructures.hh  VectorTools.hh  timestamp.hh
SSbarLibrary/src/: AnalysisConfig.cc  CMakeLists.txt  FileSelector.cc  VectorTools.cc
Scripts/: CMakeLists.txt  LinkDef.hh  main_scripts.cc
Scripts/bkup/: LPFOAnalyzer.C  LPFOAnalyzer.h  MakeClass.C
Scripts/include/: EventAnalyzer.hh  HistProcessor.hh  NtupleProcessor.hh
Scripts/src/: CMakeLists.txt  EventAnalyzer.cc  HistProcessor.cc  NtupleProcessor.cc  TreeIterator.cc  TreeReader.cc
batch_jobs/: runDir.py  runROOT.py  sort.py
etc/: SSbarAnalysisConfig_default.ini  SSbarAnalysisConfig_example.ini
macros/: Efficiency.cc  Efficiency_simple.cc  Gen_Reco_K_sep_cos.cc  Gen_Reco_Stats.cc  Jet_reco_performance.cc  KPiID.cc  LPFO_sep_cos.cc  NKaons.cc  N_Particles.cc  Particle_Ratio.cc  PolarAngle.cc  SLPFO_mom_diff.cc  Stability_Purity.cc  Stability_Purity_Pion.cc  Styles.cc  cc_histos.cpp  cos_analysis.cpp  dEdx.cc  dEdx_PiLPFO.cc  gen_K_p_cos.cc  p_visual.cc  pq_method.cc  pq_method_BGFit.cc  pq_method_KPiLPFO.cc  pq_method_PiBGFit.cc  pq_method_PiBGFit_mixfit.cc  pq_method_PiBGFit_norm.cc  pq_method_PiBGFit_ud.cc  pq_method_PiLPFO.cc  pq_method_PiLPFO_eff.cc  pq_method_PiLPFO_eff_DataMC.cc  pq_method_adrian.cc  pq_method_single_mix.cc  tree2hist.cc
macros/ISR_analysis/: ISR_plots.cc
macros/cross_section/: cross_section.cc
macros/dedx/: dedx.cc  dedxSeparation.cc  dedxViolin.py
macros/efficiency/: efficiency_cos.cc
macros/error_prop/: systematic.py
macros/include/: IOTools.hh  PolarTools.hh
macros/lib/: processDict.py
macros/polar/: pq_method_KLPFO_BG_sub.cc  pq_method_KLPFO_add.cc  pq_method_LPFO_total.cc  pq_method_LPFO_ud.cc  pq_method_PiLPFO.cc  pq_method_PiLPFO_BG_sub.cc  pq_method_PiLPFO_add.cc  pq_method_PiLPFO_simple.cc  pq_method_PiLPFO_total.cc
macros/post_mortem/: pq_method_PiLPFO_BG_sub.cc
macros/preselection/: preselection.py
macros/resolution/: ang_res.py
macros/selection/: selection.py  selection_momentum.py  selection_pid.py
macros/test/: pq_method.cc
